# sat-hackathon-team-sigma-omega

./: README.md  hackathon.ipynb  pyproject.toml  warehouse_connection.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
